--- a/application.yml
+++ b/application.yml
@@ -6,8 +6,22 @@ spring:
     profiles: dev
     applicaion: 
         name: microservicecloud-config-zzy-dev
+eureka:
+  client: #客户端注册进eureka服务列表内
+    service-url: 
+      defaultZone: http://eureka7001.com:7001/eureka/
+  instance:
+    instance-id: microservicecloud-dept8001   #自定义服务名称信息
+    prefer-ip-address: true     #访问路径可以显示IP地址
 ---
 spring:
     profiles: test
     applicaion: 
         name: microservicecloud-config-zzy-test
+eureka:
+  client: #客户端注册进eureka服务列表内
+    service-url: 
+      defaultZone: http://eureka7002.com:7002/eureka/
+  instance:
+    instance-id: microservicecloud-dept8002   #自定义服务名称信息
+    prefer-ip-address: true     #访问路径可以显示IP地址
